fix(tests): fix tests